	PR preprocessor/20907 	* line-map.c (linemap_line_start): Fix bug when we need to increse 	column_bits but can re-use the current line_map.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@98515 138bc75d-0d04-0410-961f-82ee72b054a4